fix whitespace

--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace
 @namespace   StylishThemes
-@version     1.0.70
+@version     1.0.71
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -129,7 +129,8 @@ domain("patchdemo.wmflabs.org") {
 .vector-menu-tabs .mw-list-item > a:not(.mw-ui-icon), 
 .mw-article-toolbar-container .vector-menu-dropdown > a:not(.mw-ui-icon), 
 .vector-menu-tabs .mw-list-item .vector-menu-heading, 
-.mw-article-toolbar-container .vector-menu-dropdown .vector-menu-heading {
+.mw-article-toolbar-container .vector-menu-dropdown .vector-menu-heading, 
+.vector-page-toolbar-container .vector-menu-dropdown > .vector-menu-heading {
   padding: 5px 0 5px 0;
 }
 .vector-page-toolbar {
@@ -142,8 +143,8 @@ domain("patchdemo.wmflabs.org") {
 .skin-vector-2022 #coordinates {
   top: -0.9em;
 }
-.vector-feature-visual-enhancement-next-disabled #ca-wikilove.icon a {
-  padding: 8px 5px 0;
+.vector-menu-tabs .mw-list-item .mw-ui-icon {
+  margin: 0;
 }
 
 /* Nudge the Content and ToC inwards, if site-sidebar is uncollapsed */
